[workspace]
resolver = "2"
members = [
    "types",
    "orderbook",
    "journal",
    "proto",
    "transport",
    "core",
]

[workspace.dependencies]
maple-types = { path = "./types" }
maple-orderbook = { path = "./orderbook" }
maple-journal = { path = "./journal" }
maple-proto = { path = "./proto" }
maple-transport = { path = "./transport" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
disruptor = { git = "https://github.com/esciiee/disruptor-rs", branch = "feat/mutable-state" }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
