[package]
name = "maple-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maple-bench"
path = "src/main.rs"

[dependencies]
maple-types = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"