[package]
name = "maple-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maple-gateway"
path = "src/main.rs"

[dependencies]
maple-types = { workspace = true }
maple-proto = { workspace = true }
maple-transport = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }