[package]
name = "maple-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
maple-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }